# prototipo2-master

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1145a503b53d_teste.py  209667842d98_user_id.py  2c2bdea1817c_create_note_table.py  2d83e32b939f_teste.py  3238f365c682_create_note_table.py  57be44e6f3d9_add_bool.py  57fdd62d5d84_create_account_table.py  59c3a7e53491_add_pass.py  63eb0a74249e_teste.py  7d1520c0cb97_create_note_table.py  8f5f50ea40ab_add_bool.py  91368be0ff1d_create_note_tablee.py  93b24b2e5099_teste.py  97835f78a477_initial_migration.py  aabe4bd09fa0_add_column.py  bc31817a19e5_create_note_table.py
db/: connection.py  deps.py  model.py
routes/: front_form_router.py  notes_router.py  user_routes.py
schema/: notes_schema.py  user_schema.py
security/: user.py
static/: index.css  oi.css
templates/: index.html  oi.html  vertoken.html
use_case/: notes_use_cases.py  user_use_cases.py
